Controller with main